--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "team_bundle/pylon_ide"]
 	path = team_bundle/pylon_ide
 	url = https://leiming@bitbucket.org/leiming/pylon_ide.git
+[submodule "team_bundle/nerdtree"]
+	path = team_bundle/nerdtree
+	url = https://github.com/leiming/nerdtree.git
